# openprescribing-v2

./: .dockerignore  .gitignore  DEVELOPERS.md  LICENSE  README.md  app.json  biome.json  dotenv-sample  justfile  manage.py  package-lock.json  package.json  pyproject.toml  vitest.config.js
.github/workflows/: deploy.yml  main.yml  update-dependencies.yml
docker/: Dockerfile  docker-compose.yml  justfile
docker/entrypoints/: prod.sh
docs/: architectural_decision_records.md
measure_definitions/: aafpercent.yaml  all_antibiotics.yaml  amox_500_15_caps.yaml  aware_antibiotics.yaml  bdzadq.yaml  bdzper1000.yaml  betamethasone.yaml  branded-ratio.yaml  broad_spectrum.yaml  broad_spectrum_list.yaml  carbon_salbutamol.yaml  cgm_sensors.yaml  ciclosporin.yaml  cmpaperpt.yaml  dapagliflozin.yaml  demo-branded-ratio.yaml  demo-penicillin-capsules.yaml  demo-penicillin-oral.yaml  demo-penicillin-tablet-oral-2.yaml  demo-penicillin-tablet-oral.yaml  demo-penicillin-tablet.yaml  detemir.yaml  diltiazem.yaml  doacs_nhse.yaml  doxy_100_6_qty.yaml  environmental_inhalers.yaml  erectile-dysfunction.yaml  excess_pens.yaml  fluoroquinolones_list.yaml  fungal.yaml  gabapentinoidsddd.yaml  glutenfree.yaml  highcost_ed.yaml  icsdose.yaml  injectable_antibiotics.yaml  insulin_detemir.yaml  ktt13_nsaids_ibuprofen.yaml  lpaliskiren.yaml  lpamiodarone.yaml  lpbathshoweremollients.yaml  (+59 more)
openprescribing/: asgi.py  settings.py  urls.py  views.py  wsgi.py
openprescribing/config/: asgi.py  gunicorn.conf.py  settings.py  wsgi.py
openprescribing/data/: analysis.py  bnf_query.py  dmd_query.py  list_size_query.py
openprescribing/web/: analysis_presentation.py  api.py  charts.py  deciles.py  decorators.py  middleware.py  models.py  presenters.py  urls.py  views.py
opentelemetry/collector/: README.md  collector.service  config.yaml  install.sh  justfile  secrets-dotenv-sample
scripts/: ddb-view  install_duckdb_extras.py  post_output_to_slack.py
tests/: conftest.py  test_measure_definitions.py  utils.py
tests/config/: test_settings.py
tests/data/: test_analysis.py  test_bnf_query.py  test_bnf_query_round_trips.py
tests/fixtures/: dmd_bnf_map.csv
tests/functional/: conftest.py  test_analysis.py  test_bnf_browser.py  test_bnf_code.py  test_bnf_codes.py  test_build_analysis.py  test_query.py
tests/js/: bnf-utils.test.js  build-analysis-filters.test.js  prescribing-query-utils.test.js
tests/scripts/: test_post_output_to_slack.py
tests/utils/: data_utils.py  dmd_utils.py  ingest_utils.py  medications_utils.py  rxdb_utils.py  url_utils.py
tests/web/: conftest.py  test_api.py  test_deciles.py  test_decorators.py  (+2 more)
(+174 files in other folders)
