[project]
name = "repo-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "beautifulsoup4>=4.14.2",
    "django>=5.2.7",
    "duckdb>=1.4.2",
    "gunicorn>=23.0.0",
    "html5lib>=1.1",
    "numpy>=2.3.4",
    "opentelemetry-exporter-otlp-proto-http>=1.38.0",
    "opentelemetry-instrumentation-django>=0.59b0",
    "opentelemetry-sdk>=1.38.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "requests>=2.32.5",
    "scipy>=1.16.2",
    "whitenoise>=6.11.0",
]

[tool.coverage.run]
branch = true
dynamic_context = "test_function"
omit = [
  ".venv/*",
  # exclude functional tests from coverage, as we run them separately
  "tests/functional/*",
]

[tool.coverage.report]
fail_under = 100
skip_covered = true
show_missing = true
exclude_also = [
    # Indicates that the line should never be hit
    "assert False",
    # Custom multiline pragma to allow excluding whole files. See:
    # https://coverage.readthedocs.io/en/7.11.0/excluding.html#multi-line-exclusion-regexes
    '\A(?s:.*# pragma: no cover file.*)\Z',
]

[tool.coverage.html]
show_contexts = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "openprescribing.config.settings"
testpaths = [
   "tests"
]
markers = [
  "functional: tests that use Playwright in functional tests",
]

[tool.ruff]
line-length = 88
exclude = [
  ".direnv",
  ".git",
  ".github",
  ".ipynb_checkpoints",
  ".pytest_cache",
  ".venv",
  "__pycache__",
  "docker",
  "htmlcov",
  "venv",
]

[tool.ruff.lint]
extend-select = [
  "A",  # flake8-builtins
  "I",  # isort
  "ICN",  # flake8-import-conventions
  "INP",  # flake8-no-pep420
  "ISC",  # flake8-implicit-str-concat
  "UP",  # pyupgrade
  "W",  # pycodestyle warning
]
extend-ignore = [
  "E501",
  "E731",
]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.flake8-import-conventions.aliases]
altair = "alt"
numpy = "np"
pandas = "pd"

# Note: any `exclude-newer-package` timestamps should be removed if > 7 days old
# See https://github.com/opensafely-core/repo-template/blob/main/DEVELOPERS.md for details
[tool.uv]
required-version = ">=0.9"
exclude-newer = "2026-02-03T00:00:00Z"
exclude-newer-package = {}

[dependency-groups]
dev = [
    "coverage>=7.10.6",
    "playwright>=1.56.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-django>=4.11.1",
    "pytest-freezer>=0.4.9",
    "pytest-playwright>=0.7.1",
    "pyyaml>=6.0.2",
    "responses>=0.25.8",
    "ruff>=0.12.11",
]
